partiql/tests/snapshots/pretty__graph_shapes_4.snap
---
source: partiql/tests/pretty.rs
expression: doc
---
========================================================================================================================================================================================================
SELECT * FROM (g MATCH (x)-[e]->*(y) ONE ROW PER STEP ( x, e, y ) )
========================================================================================================================================================================================================

------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
SELECT * FROM (g MATCH (x) -[e]->* (y)
  ONE ROW PER STEP (x, e, y))

------------------------------------------------------------------------------------------------------------------------
SELECT * FROM (g MATCH (x) -[e]->* (y)
  ONE ROW PER STEP (x, e, y))

--------------------------------------------------------------------------------
SELECT * FROM (g MATCH (x) -[e]->* (y)
  ONE ROW PER STEP (x, e, y))

----------------------------------------
SELECT * FROM (g MATCH (x) -[e]->* (y)
  ONE ROW PER STEP (x, e, y))

------------------------------
SELECT *
FROM (g MATCH (x) -[e]->* (y)
  ONE ROW PER STEP (x, e, y))

--------------------
SELECT *
FROM (g MATCH (x) -[e]->* (y)
  ONE ROW PER STEP
  (x, e, y))

----------
SELECT *
FROM (g MATCH (x) -[e]->* (y)
  ONE ROW PER STEP
  (x, e,
  y))
