partiql/tests/snapshots/pretty__graph_shapes_6.snap
---
source: partiql/tests/pretty.rs
expression: doc
---
========================================================================================================================================================================================================
SELECT * FROM (g MATCH (x)-[e]->*(y) COLUMNS(x as node1, e, y.*) )
========================================================================================================================================================================================================

------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
SELECT * FROM (g MATCH (x) -[e]->* (y)
  COLUMNS (x AS node1, e, y.*))

------------------------------------------------------------------------------------------------------------------------
SELECT * FROM (g MATCH (x) -[e]->* (y)
  COLUMNS (x AS node1, e, y.*))

--------------------------------------------------------------------------------
SELECT * FROM (g MATCH (x) -[e]->* (y)
  COLUMNS (x AS node1, e, y.*))

----------------------------------------
SELECT * FROM (g MATCH (x) -[e]->* (y)
  COLUMNS (x AS node1, e, y.*))

------------------------------
SELECT *
FROM (g MATCH (x) -[e]->* (y)
  COLUMNS (x AS node1, e,
  y.*))

--------------------
SELECT *
FROM (g MATCH (x) -[e]->* (y)
  COLUMNS (x AS node1,
  e, y.*))

----------
SELECT *
FROM (g MATCH (x) -[e]->* (y)
  COLUMNS (x AS node1,
  e, y.*))
