partiql/tests/snapshots/pretty__graph_shapes_7.snap
---
source: partiql/tests/pretty.rs
expression: doc
---
========================================================================================================================================================================================================
SELECT * FROM (g MATCH (x)-[e]->*(y) EXPORT ALL SINGLETONS )
========================================================================================================================================================================================================

------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
SELECT * FROM (g MATCH (x) -[e]->* (y)
  EXPORT ALL SINGLETONS)

------------------------------------------------------------------------------------------------------------------------
SELECT * FROM (g MATCH (x) -[e]->* (y)
  EXPORT ALL SINGLETONS)

--------------------------------------------------------------------------------
SELECT * FROM (g MATCH (x) -[e]->* (y)
  EXPORT ALL SINGLETONS)

----------------------------------------
SELECT * FROM (g MATCH (x) -[e]->* (y)
  EXPORT ALL SINGLETONS)

------------------------------
SELECT *
FROM (g MATCH (x) -[e]->* (y)
  EXPORT ALL SINGLETONS)

--------------------
SELECT *
FROM (g MATCH (x) -[e]->* (y)
  EXPORT ALL SINGLETONS)

----------
SELECT *
FROM (g MATCH (x) -[e]->* (y)
  EXPORT ALL SINGLETONS)
