partiql/tests/snapshots/pretty__graph_shapes_8.snap
---
source: partiql/tests/pretty.rs
expression: doc
---
========================================================================================================================================================================================================
SELECT * FROM (g MATCH (x)-[e]->*(y) EXPORT ALL SINGLETONS EXCEPT ( e, y ) )
========================================================================================================================================================================================================

------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
SELECT * FROM (g MATCH (x) -[e]->* (y)
  EXPORT ALL SINGLETONS EXCEPT (e, y))

------------------------------------------------------------------------------------------------------------------------
SELECT * FROM (g MATCH (x) -[e]->* (y)
  EXPORT ALL SINGLETONS EXCEPT (e, y))

--------------------------------------------------------------------------------
SELECT * FROM (g MATCH (x) -[e]->* (y)
  EXPORT ALL SINGLETONS EXCEPT (e, y))

----------------------------------------
SELECT * FROM (g MATCH (x) -[e]->* (y)
  EXPORT ALL SINGLETONS EXCEPT (e, y))

------------------------------
SELECT *
FROM (g MATCH (x) -[e]->* (y)
  EXPORT ALL SINGLETONS EXCEPT (e,
  y))

--------------------
SELECT *
FROM (g MATCH (x) -[e]->* (y)
  EXPORT ALL SINGLETONS EXCEPT (e,
  y))

----------
SELECT *
FROM (g MATCH (x) -[e]->* (y)
  EXPORT ALL SINGLETONS EXCEPT (e,
  y))
