partiql/tests/snapshots/pretty__graph_shapes_9.snap
---
source: partiql/tests/pretty.rs
expression: doc
---
========================================================================================================================================================================================================
SELECT * FROM (g MATCH (x)-[e]->*(y) EXPORT SINGLETONS ( x, e ) )
========================================================================================================================================================================================================

------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
SELECT * FROM (g MATCH (x) -[e]->* (y)
  EXPORT SINGLETONS (x, e))

------------------------------------------------------------------------------------------------------------------------
SELECT * FROM (g MATCH (x) -[e]->* (y)
  EXPORT SINGLETONS (x, e))

--------------------------------------------------------------------------------
SELECT * FROM (g MATCH (x) -[e]->* (y)
  EXPORT SINGLETONS (x, e))

----------------------------------------
SELECT * FROM (g MATCH (x) -[e]->* (y)
  EXPORT SINGLETONS (x, e))

------------------------------
SELECT *
FROM (g MATCH (x) -[e]->* (y)
  EXPORT SINGLETONS (x, e))

--------------------
SELECT *
FROM (g MATCH (x) -[e]->* (y)
  EXPORT SINGLETONS (x,
  e))

----------
SELECT *
FROM (g MATCH (x) -[e]->* (y)
  EXPORT SINGLETONS (x,
  e))
