partiql/tests/snapshots/pretty__graph_simplified_1.snap
---
source: partiql/tests/pretty.rs
expression: doc
---
========================================================================================================================================================================================================
SELECT * FROM (g MATCH <-/ start&begin fin> /- )
========================================================================================================================================================================================================

------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
SELECT * FROM (g MATCH <-/ start&begin fin> /-)

------------------------------------------------------------------------------------------------------------------------
SELECT * FROM (g MATCH <-/ start&begin fin> /-)

--------------------------------------------------------------------------------
SELECT * FROM (g MATCH <-/ start&begin fin> /-)

----------------------------------------
SELECT *
FROM (g MATCH <-/ start&begin fin> /-)

------------------------------
SELECT *
FROM (g MATCH <-/ start&begin fin> /-)

--------------------
SELECT *
FROM (g MATCH <-/ start&begin fin> /-)

----------
SELECT *
FROM (g MATCH <-/ start&begin fin> /-)
