partiql/tests/snapshots/pretty__graph_simplified_2.snap
---
source: partiql/tests/pretty.rs
expression: doc
---
========================================================================================================================================================================================================
SELECT * FROM (g MATCH ~/ !begin -fin /~ )
========================================================================================================================================================================================================

------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
SELECT * FROM (g MATCH ~/ !begin -fin /~)

------------------------------------------------------------------------------------------------------------------------
SELECT * FROM (g MATCH ~/ !begin -fin /~)

--------------------------------------------------------------------------------
SELECT * FROM (g MATCH ~/ !begin -fin /~)

----------------------------------------
SELECT *
FROM (g MATCH ~/ !begin -fin /~)

------------------------------
SELECT *
FROM (g MATCH ~/ !begin -fin /~)

--------------------
SELECT *
FROM (g MATCH ~/ !begin -fin /~)

----------
SELECT *
FROM (g MATCH ~/ !begin -fin /~)
