partiql/tests/snapshots/pretty__graph_simplified_3.snap
---
source: partiql/tests/pretty.rs
expression: doc
---
========================================================================================================================================================================================================
SELECT * FROM (g MATCH -/ start <fin /-> )
========================================================================================================================================================================================================

------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
SELECT * FROM (g MATCH -/ start <fin /->)

------------------------------------------------------------------------------------------------------------------------
SELECT * FROM (g MATCH -/ start <fin /->)

--------------------------------------------------------------------------------
SELECT * FROM (g MATCH -/ start <fin /->)

----------------------------------------
SELECT *
FROM (g MATCH -/ start <fin /->)

------------------------------
SELECT *
FROM (g MATCH -/ start <fin /->)

--------------------
SELECT *
FROM (g MATCH -/ start <fin /->)

----------
SELECT *
FROM (g MATCH -/ start <fin /->)
