partiql/tests/snapshots/pretty__graph_simplified_5.snap
---
source: partiql/tests/pretty.rs
expression: doc
---
========================================================================================================================================================================================================
SELECT * FROM (g MATCH ~/ start <fin> | begin -fin /~> )
========================================================================================================================================================================================================

------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
SELECT * FROM (g MATCH ~/ start <fin> | begin -fin /~>)

------------------------------------------------------------------------------------------------------------------------
SELECT * FROM (g MATCH ~/ start <fin> | begin -fin /~>)

--------------------------------------------------------------------------------
SELECT * FROM (g MATCH ~/ start <fin> | begin -fin /~>)

----------------------------------------
SELECT *
FROM (g MATCH ~/ start <fin> | begin -fin /~>)

------------------------------
SELECT *
FROM (g MATCH ~/ start <fin> | begin -fin /~>)

--------------------
SELECT *
FROM (g MATCH ~/ start <fin> | begin -fin /~>)

----------
SELECT *
FROM (g MATCH ~/ start <fin> | begin -fin /~>)
