partiql/tests/snapshots/pretty__graph_simplified_6.snap
---
source: partiql/tests/pretty.rs
expression: doc
---
========================================================================================================================================================================================================
SELECT * FROM (g MATCH <-/ start? intermediate{1,} fin  /-> )
========================================================================================================================================================================================================

------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
SELECT * FROM (g MATCH <-/ start? intermediate+ fin /->)

------------------------------------------------------------------------------------------------------------------------
SELECT * FROM (g MATCH <-/ start? intermediate+ fin /->)

--------------------------------------------------------------------------------
SELECT * FROM (g MATCH <-/ start? intermediate+ fin /->)

----------------------------------------
SELECT *
FROM (g MATCH <-/ start? intermediate+ fin /->)

------------------------------
SELECT *
FROM (g MATCH <-/ start? intermediate+ fin /->)

--------------------
SELECT *
FROM (g MATCH <-/ start? intermediate+ fin /->)

----------
SELECT *
FROM (g MATCH <-/ start? intermediate+ fin /->)
